--- a/driver.html
+++ b/driver.html
@@ -174,7 +174,7 @@
                 });
         }
         function deletePatient(patientId) {
-            if (confirm("Are you sure you want to delete this patient?")) {
+            if (confirm("Are you sure you want to delete this review?")) {
                 fetch(`https://doc-back.onrender.com/patients/${patientId}`, {
                     method: 'DELETE',
                 })
